--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -1,52 +1,40 @@
 {
   "name": "web-client",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "0xsequence": "^2.3.9",
+    "@0xsequence/checkout": "^5.1.1",
+    "@0xsequence/connect": "^5.1.1",
+    "@0xsequence/network": "^2.3.9",
+    "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.74.4",
+    "dotenv": "^16.5.0",
+    "ethers": "6.13.0",
+    "react": "^19.0.0",
+    "react-apple-signin-auth": "^1.1.1",
+    "react-dom": "^19.0.0",
+    "viem": "^2.27.2",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^4.9.3",
-    "chai": "^4.3.7",
-    "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.14.0",
-    "hardhat-gas-reporter": "^1.0.9"
+    "@eslint/js": "^9.22.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.3.1"
   }
 }
