--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -14,6 +14,7 @@
     "@0xsequence/checkout": "^5.1.1",
     "@0xsequence/connect": "^5.1.1",
     "@0xsequence/network": "^2.3.9",
+    "@0xsequence/waas": "^2.3.9",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.74.4",
     "dotenv": "^16.5.0",
