--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -22,6 +22,8 @@
     "react": "^19.0.0",
     "react-apple-signin-auth": "^1.1.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
     "viem": "^2.27.2",
     "wagmi": "^2.14.16"
   },
