--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -16,6 +16,7 @@
     "@0xsequence/network": "^2.3.9",
     "@0xsequence/waas": "^2.3.9",
     "@react-oauth/google": "^0.12.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.74.4",
     "dotenv": "^16.5.0",
     "ethers": "6.13.0",
