--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.74.4",
+    "aos": "^2.3.4",
     "dotenv": "^16.5.0",
     "ethers": "6.13.0",
     "react": "^19.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
